Fixing Header on Mobile

--- a/styles/sass/_mediaQueries.scss
+++ b/styles/sass/_mediaQueries.scss
@@ -67,6 +67,9 @@
 }
 
 @media only screen and (max-width: 700px) {
+  .header1 {
+    min-height: 100vh;
+  }
   .intro {
     padding: 0;
     grid-template-columns: 1fr;
